# inference-engine-benchmark-system

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile.dashboard  NEXT_STEPS.md  PENDING_RUNS.md  README.md  RELEASE_NOTES_v0.1.0-beta.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  docker-compose.gemma9b-vllm-a10g.yml  docker-compose.phi3mini-sglang-a10g.yml  docker-compose.yml  final_report.md  pending_run_gemma9b_vllm.sh  pending_run_gemma9b_vllm_verify.sh  pending_run_phi3mini_sglang.sh  pending_run_phi3mini_sglang_verify.sh  phase3_resume_from_phi.sh  phase3_resume_from_qwen.sh  pyproject.toml  requirements.txt  run_experiment.py
.github/: pull_request_template.md
analysis/: __init__.py  _figure_style.py  decode_length_analysis.py  final_report.py  generate_decode_length_figure.py  generate_final_benchmark_report.py  generate_goodput_figure.py  generate_spec_decoding_figure.py  generate_variance_figure.py  goodput.py  report.py  tpot_analysis.py  variance_analysis.py
benchmarks/: matrix.py  metrics.py  prompt_packs.py  runner.py  scenarios.py
dashboard/: app.py
deploy/: ec2_deploy.sh
docs/: GETTING_STARTED.md  KNOWN_LIMITATIONS.md  MODEL_CATALOG.md  NEXT_STEPS.md  ROADMAP.md  RUN_STATUS.md  SINGLE_GPU_OPERATION.md  SPECULATIVE_DECODING.md  VALIDATED_BENCHMARK_RUNBOOK.md
engines/: base_client.py  sglang_client.py  vllm_client.py
prompts/: README.md  long_context.jsonl  long_generation.jsonl  reasoning.jsonl  shared_prefix.json  short_chat.jsonl  structured_json.jsonl
reports/: benchmark_snapshot_2026-03-22.json  benchmark_snapshot_2026-03-28.json  benchmark_snapshot_2026-03-31.json  blog_companion_guides.md  concurrency64_summary.md  cross_model_summary.md  decode_length_analysis.md  decode_length_sweep_summary.md  final_benchmark_report_2026-03-22.md  final_benchmark_report_2026-03-28.md  goodput_slo100_35.md  (+5 more)
(+831 files in other folders)
