[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inference-engine-benchmark"
version = "0.1.0"
description = "Comparative benchmark system for vLLM vs SGLang inference engines"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
license-files = ["LICENSE"]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "structlog>=24.1.0",
    "asyncio-throttle>=1.0.2",
    "numpy>=1.26.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "matplotlib>=3.9.0",
    "jinja2>=3.1.4",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
sglang = [
    "sglang>=0.3.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "respx>=0.21.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "build>=1.2.2",
    "twine>=5.1.1",
]

[project.scripts]
benchmark = "run_experiment:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["engines", "benchmarks", "dashboard", "sglang_programs", "analysis"]
include = ["run_experiment.py", "prompts/**"]

[tool.hatch.build.targets.sdist]
include = [
    "engines/**",
    "benchmarks/**",
    "dashboard/**",
    "sglang_programs/**",
    "analysis/**",
    "tests/**",
    "deploy/**",
    "prompts/**",
    "run_experiment.py",
    "docker-compose.yml",
    "Dockerfile.dashboard",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    ".env.example",
    "docs/**",
]
